# Textporter

./: README.md  dialog extractor.py  pyproject.toml  settings.ini  textporter.desktop
textporter/: Manual.html  Textporter.ui  __init__.py  dialog extractor.py  settings.ini  textporter.py
